adding payment microservice + fix foreign key building